--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,13 @@ permalink:        /post/:title
 
 # Setup
 title:            "Lucas"
-description:      "Lucas's website."
+description:      "Lucas's Website."
 url:              http://lucascorleone.github.io
 baseurl:          "/"
+version:          "0.1"
 
 author:
-  name:           "Lucas (Truong)"
+  name:           "Lucas Corleone"
 
 # Custom vars
 twitter:        https://twitter.com/
